<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dev.dmytririsov.statemachine.MainActivity">

    <TextView
        android:id="@+id/tv_alarm_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="35dp"
        android:background="@color/green"
        android:text="@string/disarmed"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock" />

        <Button
            android:id="@+id/btn_lockx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lockx2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_unlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock" />

        <Button
            android:id="@+id/btn_unlockx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlockx2" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_state" />


</LinearLayout>
